nuevo archivo Lab1.css

--- a/Laboratorio1_HTML5_TC2005B.html
+++ b/Laboratorio1_HTML5_TC2005B.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <link rel="stylesheet" href="css/Laboratorio1.css">
         <meta charset="UTF-8">
-        <title> Laboratorio 1: Introducción a las aplicaciones web, HTML5 y ciclo de vida de los sistemas de información </title>
+        <title> Lab1 </title>
     </head>
 
     <body>
         <header>
-            <h1>Laboratorio 1: Mi Website</h1>
+            <h1>Elizabeth Orduña</h1>
         </header>
 
             <nav>
@@ -156,5 +157,6 @@
             <p><strong>Correo: </strong>A01424302@tec.mx</p>
             <p><strong>Editor usado:</strong> Visual Studio Code (<a href="https://code.visualstudio.com/">Visitar sitio de VSC</a>)</p>
         </footer>
+        <script scr="js/Laboratorio1.js"></script>
     </body>
 </html>
