--- a/Laboratorio4_JS_TC2005B.html
+++ b/Laboratorio4_JS_TC2005B.html
@@ -8,13 +8,44 @@
     <body>
         <h1>Ejercicios JavaSript</h1>
 
+    <section>
     <!--Ej. 1: Tabla de ^2 y ^3-->
     <h2>Ejercicio 1: Tabla de ^2 y ^3</h2>
-    <button onclick="ejercicio1()">Ejecutar</button>
+    <button id= "ejercicio1">Ejecutar ejercicio 1</button>
+    </section>
 
-
+    <section>
     <!--Ej. 2: Entrada: Usando un prompt se pide el resultado de la suma de 2 números generados de manera aleatoria. 
                Salida: La página debe indicar si el resultado fue correcto o incorrecto, y el tiempo que tardó el usuario en escribir la respuesta. -->
+    <h2>Ejercicio 2: Suma de números aleatorios</h2>
+    <button id="ejercicio2">Ejecutar ejercicio 2</button>
+    </section>
+
+    <section>
+    <!--Ej. 3: Función: contador. Parámetros: Un arreglo de números. 
+               Regresa: La cantidad de números negativos en el arreglo, la cantidad de 0's, y la cantidad de valores mayores a 0 en el arreglo. -->
+    <h2>Ejercicio 3: Contador </h2>
+    <button id="ejercicio3">Ejecutar ejercicio 3</button>
+    </section>
+
+    <section>
+    <!--Ej. 4: Función: promedios. Parámetros: Un arreglo de arreglos de números. 
+               Regresa: Un arreglo con los promedios de cada uno de los renglones de la matriz. -->
+    <h2>Ejercicio 4: Promedios de la matriz </h2>
+    <button id="ejercicio4">Ejecutar ejercicio 4</button>
+    </section>
+
+    <section>
+    <!--Ej. 5: Función: inverso. Parámetros: Un número.
+               Regresa: El número con sus dígitos en orden inverso.-->
+    <h2>Ejercicio 5: Inverso </h2>
+    <button id="ejercicio5">Ejecutar ejercicio 5</button>
+    </section>
+
+    <h2>Ejercicio 6: Calculadora (Suma y Resta) </h2>
+    <button id="ejercicio6">Ejecutar ejercicio 6</button>
+    </section>
+
     </body>
     <script src="js/Laboratorio4.js"></script>
 </html>
