Se agrega footer al Laboratorio4.html

--- a/Laboratorio4_JS_TC2005B.html
+++ b/Laboratorio4_JS_TC2005B.html
@@ -82,7 +82,12 @@
             <br><li>Zubikarai, S. (12 de enero del 2022). Manual de arreglos en JavaScript: Métodos de arreglos de JS explicados con ejemplos. freeCodeCamp.org. https://www.freecodecamp.org/espanol/news/el-manual-de-arreglos-en-javascript/</li>
         </details>
     </section>    
-
+        <footer>
+        <p><strong>Nombre:</strong> Maria Elizabeth Orduña Toledo</p>
+        <p><strong>Matrícula:</strong> A01424302</p>
+        <p><strong>Correo:</strong> A01424302@tec.mx</p>
+        <p><strong>Editor usado:</strong> Visual Studio Code (<a href="https://code.visualstudio.com/">Visitar sitio de VSC</a>)</p>
+        </footer>
     </body>
     <script src="js/Laboratorio4.js"></script>
 </html>
